<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/dicas"
        android:id="@+id/itemDica"
        app:showAsAction="always"
        android:icon="@drawable/ic_regras_0"
        tools:ignore="AlwaysShowAction" />

    <item android:title="@string/reiniciar"
        android:id="@+id/itemReiniciar"
        app:showAsAction="never" />

    <item android:title="@string/settings"
        android:id="@+id/itemConf"
        app:showAsAction="never" />

    <item android:title="@string/ajuda"
        android:id="@+id/itemAjuda"
        app:showAsAction="never" />

    <item android:title="@string/sair"
        android:id="@+id/itemSair"
        app:showAsAction="never" />

</menu>